usando listas, ancoras e imagens

--- a/front-end/01/index.html
+++ b/front-end/01/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Blog Pessoal</title>
 </head>
 
 <body>
@@ -28,6 +28,10 @@
    <div class="viagens">
       <h2>Viagens</h2>
       <p>Conheci poucos lugares do Brasil. Ja fui para o Norte (Salinas), Nordeste (São Luis, Carolina, Teresina, Fortaleza, Viçosa) e Centro-Oeste (Brasilia, Goiania)</p>
+   </div>
+   <div class="link">
+      <h3><a href="index02.html">Comidas preferidas</a></h3>
+      <h3><a href="index03.html">Animes preferidos</a></h3>
    </div>
 
 </body>
