alinhando as divs usando float

--- a/front-end/02/index.html
+++ b/front-end/02/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Blog Pessoal</title>
    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
    <div class="container">
       <h1 class="titulo">Meu Blog Pessoal</h1>
@@ -18,21 +20,29 @@
       <div class="sections">
          <div class="rotina">
             <h1>Minha Rotina</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, blanditiis quaerat? Non, voluptatibus consequatur eius, dolorem earum facere qui veritatis quisquam ex excepturi, temporibus dolores molestiae fugit est natus obcaecati!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, blanditiis quaerat? Non, voluptatibus
+               consequatur eius, dolorem earum facere qui veritatis quisquam ex excepturi, temporibus dolores molestiae
+               fugit est natus obcaecati!</p>
          </div>
          <div class="hobbies">
             <h1>Meus Hobbies</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In eligendi consequuntur, repellat corrupti commodi nulla eos rem ab praesentium illo optio voluptates. Tempora, atque quidem placeat in ratione et quod.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In eligendi consequuntur, repellat corrupti
+               commodi nulla eos rem ab praesentium illo optio voluptates. Tempora, atque quidem placeat in ratione et
+               quod.</p>
          </div>
          <div class="artistas">
             <h1>Bandas/Artistas Preferidos</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quos autem odit architecto voluptatibus doloribus accusamus deleniti repudiandae laboriosam officiis, voluptate debitis, perferendis dolorem magnam vel facilis eius soluta magni?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quos autem odit architecto voluptatibus
+               doloribus accusamus deleniti repudiandae laboriosam officiis</p>
          </div>
          <div class="viagens">
             <h1>Viagens</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorem excepturi laudantium dolores ipsam dignissimos facere dolore debitis! Aperiam ducimus obcaecati repellendus cumque sint cupiditate temporibus, suscipit eveniet esse. Provident.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorem excepturi laudantium dolores ipsam
+               dignissimos facere dolore debitis! Aperiam ducimus obcaecati repellendus cumque sint cupiditate
+               temporibus, suscipit eveniet esse. Provident.</p>
          </div>
       </div>
    </div>
 </body>
+
 </html>
