ajeitando os estilos da pratica 02

--- a/front-end/02/index.html
+++ b/front-end/02/index.html
@@ -9,40 +9,40 @@
 </head>
 
 <body>
-   <div class="container">
-      <h1 class="titulo">Meu Blog Pessoal</h1>
-      <div class="cabecalho">
+      <div class="titulo">
+         <h1>Meu Blog Pessoal</h1>
+      </div>
+      <section class="cabecalho">
          <p class="c">Nome: Savyo Leão</p>
          <p class="c">Curso: Front-end</p>
          <p class="c">Data Nascimento: 23/07/2002</p>
          <p class="c">Última Atualização: 07/03/2024</p>
-      </div>
+      </section>
       <div class="sections">
-         <div class="rotina">
+         <div class="card" id="rotina">
             <h1>Minha Rotina</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, blanditiis quaerat? Non, voluptatibus
                consequatur eius, dolorem earum facere qui veritatis quisquam ex excepturi, temporibus dolores molestiae
                fugit est natus obcaecati!</p>
          </div>
-         <div class="hobbies">
+         <div class="card" id="hobbies">
             <h1>Meus Hobbies</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In eligendi consequuntur, repellat corrupti
                commodi nulla eos rem ab praesentium illo optio voluptates. Tempora, atque quidem placeat in ratione et
                quod.</p>
          </div>
-         <div class="artistas">
+         <div class="card" id="artistas">
             <h1>Bandas/Artistas Preferidos</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quos autem odit architecto voluptatibus
                doloribus accusamus deleniti repudiandae laboriosam officiis</p>
          </div>
-         <div class="viagens">
+         <div class="card" id="viagens">
             <h1>Viagens</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dolorem excepturi laudantium dolores ipsam
                dignissimos facere dolore debitis! Aperiam ducimus obcaecati repellendus cumque sint cupiditate
                temporibus, suscipit eveniet esse. Provident.</p>
          </div>
       </div>
-   </div>
 </body>
 
 </html>
