criando paginas para a navBar e pagina de cadastro

--- a/front-end/mercado-livre/index.html
+++ b/front-end/mercado-livre/index.html
@@ -37,14 +37,15 @@
          <input type="text" id="search">
       </article>
       <article class="navBar headerPart">
-         <a class="optionsNav" href="#">Categorias</a>
-         <a class="optionsNav" href="#">Ofertas do dia</a>
-         <a class="optionsNav" href="#">Histórico</a>
-         <a class="optionsNav" href="#">Moda</a>
+         <a class="optionsNav" href="./other-pags/category.html">Categorias</a>
+         <a class="optionsNav" href="./other-pags/offersDay.html">Ofertas do dia</a>
+         <a class="optionsNav" href="./other-pags/historic.html">Histórico</a>
+         <a class="optionsNav" href="./other-pags/moda.html">Moda</a>
+         <a class="optionsNav" href="./other-pags/register.html">Cadastre-se</a>
       </article>
    </section>
    <section class="content">
-      <section class="containerPay">
+      <section class="containerPay contents">
          <section class="firstOffer">
             <h2 class="offerTitle">Pagamento rápido e seguro</h2>
             <h3 class="subTitle">Com cartão</h3>
@@ -61,6 +62,12 @@
             <h2 class="offerTitle">Via PIX</h2>
             <h3 class="subTitle">Ver mais</h3>
          </section>
+      </section>
+      <section class="cards">
+         <div class="product">
+            <img src="" alt="">
+            
+         </div>
       </section>
    </section>
 </body>
