adicionando área de cards e transição

--- a/front-end/mercado-livre/index.html
+++ b/front-end/mercado-livre/index.html
@@ -41,7 +41,7 @@
          <a class="optionsNav" href="./other-pags/offersDay.html">Ofertas do dia</a>
          <a class="optionsNav" href="./other-pags/historic.html">Histórico</a>
          <a class="optionsNav" href="./other-pags/moda.html">Moda</a>
-         <a class="optionsNav" href="./other-pags/register.html">Cadastre-se</a>
+         <a class="optionsNav" href="./other-pags/register/register.html">Cadastre-se</a>
       </article>
    </section>
    <section class="content">
@@ -63,10 +63,26 @@
             <h3 class="subTitle">Ver mais</h3>
          </section>
       </section>
-      <section class="cards">
+      <section class="cards contents">
          <div class="product">
-            <img src="" alt="">
-            
+            <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
+            <h3 class="subTitle">Galaxy A03s</h3>
+            <h3 class="subTitle">R$1500,00</h3>
+         </div>
+         <div class="product">
+            <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
+            <h3 class="subTitle">Galaxy A03s</h3>
+            <h3 class="subTitle">R$1500,00</h3>
+         </div>
+         <div class="product">
+            <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
+            <h3 class="subTitle">Galaxy A03s</h3>
+            <h3 class="subTitle">R$1500,00</h3>
+         </div>
+         <div class="product">
+            <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
+            <h3 class="subTitle">Galaxy A03s</h3>
+            <h3 class="subTitle">R$1500,00</h3>
          </div>
       </section>
    </section>
