--- a/front-end/mercado-livre/other-pags/category.html
+++ b/front-end/mercado-livre/other-pags/category.html
@@ -42,6 +42,7 @@
          <a class="optionsNav" href="./offersDay.html">Ofertas do dia</a>
          <a class="optionsNav" href="./historic.html">Histórico</a>
          <a class="optionsNav" href="./moda.html">Moda</a>
+         <a class="optionsNav" href="./register/register.html">Cadastre-se</a>
       </article>
    </section>
    <section class="content">
