transição nos cards no preço

--- a/front-end/mercado-livre/index.html
+++ b/front-end/mercado-livre/index.html
@@ -66,23 +66,35 @@
       <section class="cards contents">
          <div class="product">
             <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
-            <h3 class="subTitle">Galaxy A03s</h3>
-            <h3 class="subTitle">R$1500,00</h3>
+            <div class="content-hidden">
+               <h4 class="subTitle"><s>R$1600,00</s></h4>
+               <h3 class="subTitle">Galaxy A03s</h3>
+               <h4 class="subTitle">R$1500,00</h4>
+            </div>
          </div>
          <div class="product">
             <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
-            <h3 class="subTitle">Galaxy A03s</h3>
-            <h3 class="subTitle">R$1500,00</h3>
+            <div class="content-hidden">
+               <h4 class="subTitle"><s>R$1600,00</s></h4>
+               <h3 class="subTitle">Galaxy A03s</h3>
+               <h4 class="subTitle">R$1500,00</h4>
+            </div>
          </div>
          <div class="product">
             <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
-            <h3 class="subTitle">Galaxy A03s</h3>
-            <h3 class="subTitle">R$1500,00</h3>
+            <div class="content-hidden">
+               <h4 class="subTitle"><s>R$1600,00</s></h4>
+               <h3 class="subTitle">Galaxy A03s</h3>
+               <h4 class="subTitle">R$1500,00</h4>
+            </div>
          </div>
          <div class="product">
             <img src="https://www.havan.com.br/media/catalog/product/cache/73a52df140c4d19dbec2b6c485ea6a50/c/e/celular-smartphone-samsung-galaxy-a04e-4g-octacore-3gb-ram-64gb_796560.jpg" width="224" height="224">
-            <h3 class="subTitle">Galaxy A03s</h3>
-            <h3 class="subTitle">R$1500,00</h3>
+            <div class="content-hidden">
+               <h4 class="subTitle"><s>R$1600,00</s></h4>
+               <h3 class="subTitle">Galaxy A03s</h3>
+               <h4 class="subTitle">R$1500,00</h4>
+            </div>
          </div>
       </section>
    </section>
