evento de focus e blur

--- a/front-end/eventos/index.html
+++ b/front-end/eventos/index.html
@@ -8,7 +8,7 @@
 <body>
    <form id="submit">
       <label for="email">email</label>
-      <input type="email" id="email">
+      <input type="email" id="emailtype">
       <button type="submit">enviar</button>
    </form>
    <script src="script.js"></script>
