--- a/front-end/eventos/index.html
+++ b/front-end/eventos/index.html
@@ -4,6 +4,11 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Eventos</title>
+   <style>
+      body{
+         height: 120vh;
+      }
+   </style>
 </head>
 <body>
    <form id="submit">
