event mouseup mousedown mouseover mouseout

--- a/front-end/eventos/index.html
+++ b/front-end/eventos/index.html
@@ -16,6 +16,8 @@
       <input type="email" id="emailtype">
       <button type="submit">enviar</button>
    </form>
+   <br>
+   <button id="mouseTeste">clique</button>
    <script src="script.js"></script>
 </body>
 </html>
